--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -387,3 +387,78 @@ body {
 }
 
 .full {display: none;}
+
+button {
+    margin: 0 auto;
+    padding: 0;
+    background-color: #ccc;
+    border: inherit;
+    font: inherit;
+    font-size: 1.2em;
+    outline: none;
+    width: 100%;
+    display: block;
+    text-align: left;
+    color: black;
+}
+
+/* Requirements */
+
+[data-accordion] [data-content] {
+    overflow: hidden;
+    max-height: 0;
+}
+
+/* Basic Theme */
+
+[data-accordion] {
+    line-height: 1;
+}
+
+[data-control] {
+    border-bottom: 1px solid #888;
+    padding: 10px;
+}
+
+[data-content] [data-accordion] {
+    border: 0;
+    padding: 0;
+}
+
+[data-content] p {
+    border: 0;
+    padding: 0;
+    margin-left: 10px;
+    font-size: 1.1em;
+}
+
+[data-content] li {
+    padding: 0;
+line-height: 1.5em;
+    font-size: 1.1em;
+}
+
+[data-accordion] [data-control] {
+    position: relative;
+    padding-right: 40px;
+}
+
+[data-accordion] > [data-control]:after {
+    content: "";
+    position: absolute;
+    right: 10px;
+    top: 12px;
+    font-size: 25px;
+    font-weight: 200;
+    color: #444;
+    height: 15px;
+    width: 24px;
+    background: url('../img/down.png') center center no-repeat;
+    background-size: 50%;
+}
+
+[data-accordion].open > [data-control]:after {
+    -webkit-transform: rotate(-180deg); 
+    -ms-transform: rotate(-180deg); 
+    transform: rotate(-180deg); 
+}
