minor cleanup, and more text in README

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -386,7 +386,7 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
-.full {display: none;}
+/* accordion styling here on */
 
 button {
     margin: 0 auto;
@@ -401,8 +401,6 @@ button {
     text-align: left;
     color: black;
 }
-
-/* Requirements */
 
 [data-accordion] [data-content] {
     overflow: hidden;
